k8s/envoy/envoy-service.yaml
# envoy-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
  namespace: agricultural-vision
  labels:
    app: envoy
spec:
  type: NodePort
  selector:
    app: envoy
  ports:
    - name: http
      port: 80
      targetPort: 10000
      nodePort: 30080  # 指定端口，范围：30000-32767
      protocol: TCP
    - name: admin
      port: 9901
      targetPort: 9901
      nodePort: 30901
      protocol: TCP
